fixed alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,14 +105,12 @@ noscript p {
 .image {
   max-width: calc(50px + 5vmin);
 }
-/* ul li {
+
+ul li {
+  margin-left: 5px;
   text-align: left;
-  list-style-type: none;
 }
-ul li img {
-  text-align: center;
-  list-style-type: none;
-} */
+
 @media only screen and (min-width: 200px) {
   header .head {
     font-size: 47px;
@@ -123,11 +121,4 @@ ul li img {
   header .head {
     font-size: 64px;
   }
-  .contain ul {
-    margin-left: 5px;
-    text-align: left;
-  }
-  /* ul li img {
-    text-align: center;
-  } */
 }
